<resources>
    <string name="app_name">ActionDebugTool</string>

    <string name="hint_scan">Please tap scan</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scan&#8230;</string>
    <string name="select_robot_ip">Please select robot ip address</string>
    <string name="no_robot_found">No robots are found</string>
    <string name="one_robot_found">Robot :%1$s is found</string>
    <string name="output_uta_files">Output uta action files</string>
    <string name="input_uta_files">Input uta action files</string>
    <string name="add_new_action">Add new action</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="save_as">Save As&#8230;</string>
    <string name="enter_read_mode">Enter ReadMode</string>
    <string name="enter_read_mode_one">Enter ReadMode Sole</string>
    <string name="read">Read</string>

    <string name="robot_part_01">1</string>
    <string name="robot_part_02">2</string>
    <string name="robot_part_03">3</string>
    <string name="robot_part_04">4</string>
    <string name="robot_part_05">5</string>
    <string name="robot_part_06">6</string>
    <string name="robot_part_07">7</string>
    <string name="robot_part_08">8</string>
    <string name="robot_part_09">9</string>
    <string name="robot_part_10">10</string>
    <string name="robot_part_11">11</string>
    <string name="robot_part_12">12</string>
    <string name="robot_part_13">13</string>
    <string name="robot_part_14">14</string>

    <string name="add">+</string>
    <string name="subtract">-</string>

    <string name="set_number">Set Number</string>

    <string name="please_input_legal_number">Please input legal number</string>

    <string name="hint_edit_selected_frame_name">Edit frame name</string>
    <string name="set_frame_name">Set Frame Name</string>

    <string name="input_filename">Please input filename</string>

    <string name="filename_cannot_empty">Filename cannot empty</string>
    <string name="filename_has_exist">Filename has exist alreary</string>

    <string name="action_files_output_suc">Action file output suc</string>
    <string name="action_files_output_fail">Action file output fail</string>

    <string name="action_file_has_exist_already">Action file %1$s has exist already</string>

    <string name="ip_addr_invalid">Ip Address Invalid!</string>

    <string name="robot_execute_err_1_fail">Robot execute fail error code: 1, unknown reason</string>
    <string name="robot_execute_err_2_fail">Robot execute fail error code: 2, network timeout</string>
    <string name="robot_execute_err_3_fail">Robot execute fail error code: 3, robot is busy</string>
    <string name="robot_execute_err_4_fail">Robot execute fail error code: 4, robot timeout</string>
    <string name="robot_execute_err_5_fail">Robot execute fail error code: 5, motion absent</string>
    <string name="robot_execute_err_6_fail">Robot execute fail error code: 6, motion name is null</string>
    <string name="robot_execute_err_7_fail">Robot execute fail error code: 7, client IOException</string>
    <string name="robot_execute_err_8_fail">Robot execute fail error code: 8, client Exception</string>

    <string name="enter_read_mode_suc">Enter read mode suc</string>
    <string name="enter_read_mode_one_suc">Enter read mode one suc</string>
    <string name="read_motors_suc">Read motors suc</string>
    <string name="play_frame_suc">Play single frame suc</string>

    <string name="please_select_frame_first">Please select frame first</string>
</resources>
