<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!--enter read mode one-->
    <item
        android:id="@+id/menu_item_enter_read_mode_one"
        android:title="@string/enter_read_mode_one"
        app:showAsAction="always"
        />

    <!--enter read mode-->
    <item
        android:id="@+id/menu_item_enter_read_mode"
        android:title="@string/enter_read_mode"
        app:showAsAction="always"
        />

    <!--read-->
    <item
        android:id="@+id/menu_item_read"
        android:title="@string/read"
        app:showAsAction="always"
        />

    <!--copy-->
    <item
        android:id="@+id/menu_item_copy"
        android:title="@string/copy"
        app:showAsAction="always"
        />

    <!--paste-->
    <item
        android:id="@+id/menu_item_paste"
        android:title="@string/paste"
        app:showAsAction="always"
        />

    <!--delete-->
    <item
        android:id="@+id/menu_item_delete"
        android:title="@string/delete"
        app:showAsAction="always"
        />

    <!--save-->
    <item
        android:id="@+id/menu_item_save"
        android:title="@string/save"
        app:showAsAction="never"/>

    <!--save as-->
    <item
        android:id="@+id/menu_item_save_as"
        android:title="@string/save_as"
        app:showAsAction="never"/>
</menu>