<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

    <com.afunx.actiondebugtool.widget.FitHeightButton
        android:id="@+id/btn_subtract_smart_seek_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:text="@string/subtract"
        app:layout_aspectRatio="100%"
        app:layout_heightPercent="100%"
        />

    <com.afunx.actiondebugtool.widget.FitHeightButton
        android:id="@+id/btn_add_smart_seek_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:text="@string/add"
        app:layout_aspectRatio="100%"
        app:layout_heightPercent="100%"
        />

    <com.afunx.actiondebugtool.widget.FitHeightEditView
        android:id="@+id/edt_smart_seek_bar"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btn_subtract_smart_seek_bar"
        android:layout_toStartOf="@+id/btn_add_smart_seek_bar"
        app:layout_heightPercent="50%"
        app:layout_marginStartPercent="20%"
        app:layout_marginEndPercent="20%"
        app:input_type="numberSigned"
        app:alert_title="@string/set_number"
        />

    <SeekBar
        android:id="@+id/skb_smart_seek_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btn_subtract_smart_seek_bar"
        android:layout_toStartOf="@+id/btn_add_smart_seek_bar"
        app:layout_heightPercent="50%"
        app:layout_widthPercent="100%"
        app:layout_marginStartPercent="3%"
        app:layout_marginEndPercent="3%"
        />

</merge>
